--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@netlify/plugin-nextjs": "^5.11.6",
     "@reduxjs/toolkit": "^2.8.2",
     "keen-slider": "^6.8.6",
     "next": "15.3.5",
